[package]
name = "rb_date_parser"
version = "0.1.0"
description = "Rust port of the ruby date parse library"
authors = ["Cibin George<cibin@getblueshift.com>"]
repository= "https://github.com/blueshift-labs/rb_date_parser"
keywords = ["date", "time", "datetime", "parser", "parse"]
categories = ["parsing"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
chrono = {version = "0.4", features = ["clock"]}
serde = { version = "1.0", features = ["derive"]}
lazy_static = "1.4"
phf = { version = "0.10", features = ["macros"]}
fancy-regex = "0.13.0"
iana-time-zone = "0.1.60"
chrono-tz = "0.9.0"
thiserror = "1.0.61"
